[package]
name = "crisprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static= "1.4"
maplit = "1.0"
eyre = "0.6"
color-eyre = { version = "0.5", default-features = false }
smartstring = "0.2"
clap = {version = "3.0", features = ["color", "cargo"]}
log = "0.4"
stderrlog = "0.5"
