[package]
name = "crisprs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features = ["color", "cargo"]}
color-eyre = { version = "0.6", default-features = false }
eyre = "0.6"
lazy_static= "1.4"
log = "0.4"
maplit = "1.0"
rayon = "1.5"
smartstring = "1"
stderrlog = "0.5"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
