[package]
name = "crisprs"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aa_similarity = "0.1.0"
clap = {version = "3.0", features = ["color", "cargo"]}
eyre = "0.6"
lazy_static= "1.4"
log = "0.4"
maplit = "1.0"
rayon = "1.5"
smartstring = "0.2"
buche = "0.7"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
